tests/NormalTests/paczka2/big_fuzzy/94403778.err
Error in line 2: BtNsdXv A68 45,7
Error in line 6: mXaUWmW5XNd A441 -2,6
Error in line 3: BtNsdXv S292 61,6
Error in line 30: mXaUWmW5XNd S2î2 5î,5
Error in line 31: BtNsdXv S259 16,6
Error in line 40: GEXxUy7ZXY S259 0,0
Error in line 34: mXaUWmW5XNd S292 172,6
Error in line 46: GEXxUy7ZXY S259 99,8
Error in line 53: AHoEBDWT8p S292 52,1
Error in line 54: AHoEBDWT8p A441 22,8
Error in line 62: A68 S292 54,80
Error in line 47: mXaUWmW5XNd A441 37,5
Error in line 66: mXaUWmW5XNd S292 66,8
Error in line 73: A68 S259 78,3
Error in line 71: AHoEBDWT8p A68 16,5
Error in line 77: A68 A68 65,7
Error in line 75: AXmy A441 27,4
Error in line 87: Ldstd S259 91,4
Error in line 94: AXmy S292 43,4
Error in line 103: GEXxUy7ZXY A441 87,1
Error in line 108: GEXxUy7ZXY A68 52,4
Error in line 101: mXaUWmW5XNd S259 11,6
Error in line 117: AXmy A441 35,5
Error in line 114: Ldstd A441 34,4
Error in line 133: GEXxUy7ZXY A68 37,2
Error in line 138: mXaUWmW5XNd S292 84,06
Error in line 130: mXaUWmW5XNd S292 53,2
Error in line 148: Ldstd S292 1,3
Error in line 152: Ldstd S259 83,96
Error in line 149: AXmy A68 65,6
Error in line 153: AXmy A441 77,2
Error in line 159: BtNsdXv A441 66,3
Error in line 160: BtNsdXv S259 95,0
Error in line 167: Ldstd S259 195,6
Error in line 170: A68 A68 77,1
Error in line 171: A68 S292 5,7
Error in line 163: BtNsdXv A441 46,9
Error in line 190: mXaUWmW5XNd S25\ 86,4
Error in line 196: BtNsdXv S292 325,5
Error in line 207: AHoEBDWT8p S292 98,4
Error in line 208: GEXxUy7ZXY A68 65,4
Error in line 218: GEXxUy7ZXY S259 34,5
Error in line 228: BtNsdXv A441 24,59
Error in line 225: GEXxUy7ZXY A68 19,6
Error in line 229: GEXxUy7ZXY S292 53,8
Error in line 233: AXmy S292 14,2
Error in line 243: GEXxUy7ZXY S259 79,0
